# firewhale

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-edge.yml  docker-head.yml  docker-stable.yml  docker.yml
firewhale/: Caddyfile.template.txt  _internal.py  cli.py  main.py  settings.py  types.py  utils.py
firewhale/templates/: Caddyfile.jinja  Caddyfile.template.txt
