[project]
name = "firewhale"
version = "0.1.0"
readme = "README.md"
authors = [
	{ name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "docker>=7.1.0",
    "durationpy>=0.9",
    "httpx>=0.28.0",
    "inflect>=7.4.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "pendulum>=3.0.0",
    "pydantic-settings>=2.6.1",
    "tenacity>=9.1.2",
    "typer>=0.14.0",
]

[project.scripts]
firewhale = "firewhale.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
